<resources>
    <string name="app_name">Caustic LaserTag</string>
    <string name="ltcaustic_logo_description">Caustic LaserTag</string>
    <string name="new_player">New Player</string>
    <string name="log_in">Log In</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username_login">Username:</string>
    <string name="password_login">Password:</string>
    <string name="vkontakte_name">VK</string>
    <string name="facebook_name">Facebook</string>
    <string name="odnoklassniki_name">OK.ru</string>
    <string name="username_newuser">Enter username:</string>
    <string name="password_newuser">Enter new password:</string>
    <string name="confirm_password_newuser">Confirm new password:</string>
    <string name="login_button_text">Log in</string>
    <string name="create_new_user_button_text">Create New User</string>
    <string name="open_drawer">Open mode list</string>
    <string name="close_drawer">Close mode list</string>
    <string name="offline_mode">Offline Mode</string>

    <string-array name="mode_titles">
        <item>Lobby</item>
        <item>Personal</item>
        <item>Global</item>
        <item>HUD</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_gps_tracking">GPS Tracking</string>
    <string name="pref_description_gps_tracking">Allows your position to be visible to other players in HUD
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">Player</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="prefs_custom_map">Custom Map</string>
    <string name="scan_for_devices">Scan for devices</string>
    <string name="bt_connect_prompt">Connect to a Caustic head sensor to display game information.</string>
    <string name="connecting">Connecting...</string>
    <string name="cancel">Cancel</string>
    <string name="disconnect">Disconnect</string>
    <string name="team_yellow">Team Yellow</string>
    <string name="team_green">Team Green</string>
    <string name="team_blue">Team Blue</string>
    <string name="team_red">Team Red</string>
    <string name="update">Update</string>
    <string name="kills">KILLS</string>
    <string name="score">SCORE</string>
    <string name="deaths">DEATHS</string>

</resources>
