<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.caustic.lasertagclientapp.StartButtonsFragment">
    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_player"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:id="@+id/newPlayerButtonMain"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:id="@+id/logInButtonMain"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/offline_mode"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:id="@+id/offlineModeButtonMain"
            />
    </LinearLayout>
</FrameLayout>
