<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_map"
    tools:context="ru.caustic.lasertagclientapp.MapFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="HUD"
            android:visibility="gone"
            android:id="@+id/locs_test"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:id="@+id/map_fragment_container">

        </FrameLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:stretchColumns="*"
            android:divider="?android:attr/dividerHorizontal"
            android:showDividers="middle"
            >
            <TableRow>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/kills"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/score"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/deaths"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    />
            </TableRow>
            <TableRow
                android:layout_weight="1">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="0"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="30sp"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="0"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="30sp"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="0"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="30sp"
                    />
            </TableRow>
        </TableLayout>

    </LinearLayout>



</FrameLayout>
